--- a/.github/workflows/ai-python-review.yml
+++ b/.github/workflows/ai-python-review.yml
@@ -2,9 +2,8 @@ name: AI Python PR Review
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened, synchronize, reopened]
 
-# 🔴 REQUIRED permissions to comment on PR
 permissions:
   contents: read
   pull-requests: write
@@ -17,83 +16,89 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Fetch base branch
-        run: git fetch origin ${{ github.base_ref }}
-
-      - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
       - name: Collect changed Python files
+        id: files
         run: |
-          git diff --name-only origin/${{ github.base_ref }} \
-            | grep '\.py$' > python_files.txt || true
+          git fetch origin main
+          git diff --name-only origin/main...HEAD | grep '\.py$' > files.txt || true
+          echo "FILES=$(cat files.txt | tr '\n' ' ')" >> $GITHUB_ENV
 
-          if [ ! -s python_files.txt ]; then
-            echo "No Python files changed"
-            exit 0
-          fi
-
-          mkdir -p review
-          for file in $(cat python_files.txt); do
-            echo "### File: $file" >> review/input.txt
-            sed -n '1,300p' "$file" >> review/input.txt
-            echo "" >> review/input.txt
+      - name: Read Python files content
+        id: code
+        run: |
+          echo "CODE_CONTENT<<EOF" >> $GITHUB_ENV
+          for file in $FILES; do
+            echo "File: $file" >> $GITHUB_ENV
+            echo "----------------" >> $GITHUB_ENV
+            cat "$file" >> $GITHUB_ENV
+            echo -e "\n" >> $GITHUB_ENV
           done
+          echo "EOF" >> $GITHUB_ENV
 
-      - name: Call Azure AI Foundry (Python syntax check)
-        env:
-          ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
-          API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
-          DEPLOYMENT: ${{ secrets.AZURE_OPENAI_DEPLOYMENT }}
+      - name: Call Azure OpenAI
         run: |
-          PROMPT=$(cat <<EOF
-You are a senior Python code reviewer.
+          cat <<EOF > review.json
+          {
+            "messages": [
+              {
+                "role": "system",
+                "content": "You are a senior Python code reviewer."
+              },
+              {
+                "role": "user",
+                "content": |
+                  Review the following Python code ONLY for:
+                  - Syntax errors
+                  - Indentation issues
+                  - Invalid or missing imports
+                  - Obvious runtime errors
 
-Review the code ONLY for:
-- Syntax errors
-- Indentation issues
-- Invalid or missing imports
-- Obvious runtime errors
+                  DO NOT suggest refactoring or optimization.
 
-DO NOT suggest refactoring or optimization.
+                  Respond in EXACTLY one of these formats:
 
-Respond in EXACTLY one of these formats:
+                  ❌ Issues Found:
+                  - File:
+                    Line:
+                    Issue:
+                    Fix:
 
-❌ Issues Found:
-- File:
-  Line:
-  Issue:
-  Fix:
+                  OR
 
-OR
+                  ✅ No syntax issues found. Code is safe to merge.
 
-✅ No syntax issues found. Code is safe to merge.
+                  Code:
+                  ${CODE_CONTENT}
+              }
+            ],
+            "temperature": 0
+          }
+          EOF
 
-Code:
-$(cat review/input.txt)
-EOF
-)
-
-          curl -s -X POST \
-            "$ENDPOINT/openai/deployments/$DEPLOYMENT/chat/completions?api-version=2024-05-01-preview" \
+          curl -s -X POST "${{ secrets.AZURE_OPENAI_ENDPOINT }}" \
             -H "Content-Type: application/json" \
-            -H "api-key: $API_KEY" \
-            -d "{
-              \"messages\": [
-                {\"role\": \"system\", \"content\": \"You are a strict Python syntax checker\"},
-                {\"role\": \"user\", \"content\": \"$PROMPT\"}
-              ],
-              \"temperature\": 0.1
-            }" > review/output.json
+            -H "api-key: ${{ secrets.AZURE_OPENAI_API_KEY }}" \
+            -d @review.json > response.json
 
-      - name: Post AI review comment to Pull Request
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract AI response
         run: |
-          COMMENT=$(jq -r '.choices[0].message.content' review/output.json)
+          jq -r '.choices[0].message.content' response.json > comment.txt
 
-          curl -s -X POST \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments \
-            -d "$(jq -n --arg body "$COMMENT" '{body: $body}')"
+      - name: Post AI comment to Pull Request
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const comment = fs.readFileSync('comment.txt', 'utf8');
+
+            github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: comment
+            });
