--- a/.github/workflows/ai-python-review.yml
+++ b/.github/workflows/ai-python-review.yml
@@ -87,7 +87,16 @@ jobs:
 
       - name: Extract AI response
         run: |
-          jq -r '.choices[0].message.content' response.json > comment.txt
+          CONTENT=$(jq -r '.choices[0].message.content // empty' response.json)
+
+          if [ -z "$CONTENT" ]; then
+            echo "⚠️ AI review failed or returned empty response." > comment.txt
+            echo "" >> comment.txt
+            echo "Please check Azure OpenAI configuration or logs." >> comment.txt
+          else
+            echo "$CONTENT" > comment.txt
+          fi
+
 
       - name: Post AI comment to Pull Request
         uses: actions/github-script@v7
