--- a/.github/workflows/ai-python-review.yml
+++ b/.github/workflows/ai-python-review.yml
@@ -2,112 +2,85 @@ name: AI Python PR Review
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize]
 
 permissions:
-  contents: read
   pull-requests: write
+  issues: write
+  contents: read
 
 jobs:
   python-review:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-
-      - name: Collect changed Python files
+      - name: Get changed Python files
         id: files
         run: |
           git fetch origin main
           git diff --name-only origin/main...HEAD | grep '\.py$' > files.txt || true
-          echo "FILES=$(cat files.txt | tr '\n' ' ')" >> $GITHUB_ENV
 
-      - name: Read Python files content
-        id: code
+      - name: Combine Python code
         run: |
-          echo "CODE_CONTENT<<EOF" >> $GITHUB_ENV
-          for file in $FILES; do
-            echo "File: $file" >> $GITHUB_ENV
-            echo "----------------" >> $GITHUB_ENV
-            cat "$file" >> $GITHUB_ENV
-            echo -e "\n" >> $GITHUB_ENV
-          done
-          echo "EOF" >> $GITHUB_ENV
+          echo "" > code.txt
+          while read file; do
+            echo "### File: $file" >> code.txt
+            cat "$file" >> code.txt
+            echo -e "\n" >> code.txt
+          done < files.txt
 
       - name: Call Azure OpenAI
+        env:
+          AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+          AZURE_OPENAI_KEY: ${{ secrets.AZURE_OPENAI_KEY }}
         run: |
-          cat <<EOF > review.json
+          cat <<EOF > request.json
           {
             "messages": [
               {
                 "role": "system",
-                "content": "You are a senior Python code reviewer."
+                "content": "You are a strict Python code reviewer. You MUST always return a response. Never return null or empty output."
               },
               {
                 "role": "user",
-                "content": |
-                  Review the following Python code ONLY for:
-                  - Syntax errors
-                  - Indentation issues
-                  - Invalid or missing imports
-                  - Obvious runtime errors
-
-                  DO NOT suggest refactoring or optimization.
-
-                  Respond in EXACTLY one of these formats:
-
-                  ❌ Issues Found:
-                  - File:
-                    Line:
-                    Issue:
-                    Fix:
-
-                  OR
-
-                  ✅ No syntax issues found. Code is safe to merge.
-
-                  Code:
-                  ${CODE_CONTENT}
+                "content": "Review the following Python code ONLY for:\n- Syntax errors\n- Indentation issues\n- Invalid or missing imports\n- Obvious runtime errors\n\nDO NOT suggest refactoring or optimization.\n\nRespond in EXACTLY one of these formats:\n\nIssues Found:\n- File:\n  Line:\n  Issue:\n  Fix:\n\nOR\n\nNo syntax issues found. Code is safe to merge.\n\nPython code:\n\n$(cat code.txt)"
               }
             ],
-            "temperature": 0
+            "temperature": 0,
+            "max_tokens": 500
           }
           EOF
 
-          curl -s -X POST "${{ secrets.AZURE_OPENAI_ENDPOINT }}" \
+          curl -s -X POST "$AZURE_OPENAI_ENDPOINT" \
             -H "Content-Type: application/json" \
-            -H "api-key: ${{ secrets.AZURE_OPENAI_API_KEY }}" \
-            -d @review.json > response.json
+            -H "api-key: $AZURE_OPENAI_KEY" \
+            -d @request.json > response.json
 
-      - name: Extract AI response
+      - name: Extract AI response safely
         run: |
-          CONTENT=$(jq -r '.choices[0].message.content // empty' response.json)
+          CONTENT=$(jq -r '.choices[0].message.content' response.json)
 
-          if [ -z "$CONTENT" ]; then
-            echo "⚠️ AI review failed or returned empty response." > comment.txt
+          if [ "$CONTENT" = "null" ] || [ -z "$CONTENT" ]; then
+            echo "⚠️ AI review failed or returned empty output." > comment.txt
             echo "" >> comment.txt
-            echo "Please check Azure OpenAI configuration or logs." >> comment.txt
+            echo "Please verify Azure OpenAI deployment, endpoint, or API key." >> comment.txt
           else
             echo "$CONTENT" > comment.txt
           fi
-
 
       - name: Post AI comment to Pull Request
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
-            const comment = fs.readFileSync('comment.txt', 'utf8');
+            const body = fs.readFileSync('comment.txt', 'utf8');
 
-            github.rest.issues.createComment({
+            await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: comment
+              body: body
             });
