--- a/.github/workflows/ai-python-review.yml
+++ b/.github/workflows/ai-python-review.yml
@@ -35,33 +35,29 @@ jobs:
             echo "No Python files changed." >> code.txt
           fi
 
+      - name: Build request.json
+        run: |
+          jq -Rs '{
+            input:
+              "You are a strict Python code reviewer.\n\nReview the following Python code ONLY for:\n- Syntax errors\n- Indentation issues\n- Invalid or missing imports\n- Obvious runtime errors\n\nDO NOT suggest refactoring or optimization.\n\nRespond in EXACTLY one of these formats:\n\nIssues Found:\n- File:\n  Line:\n  Issue:\n  Fix:\n\nOR\n\nNo syntax issues found. Code is safe to merge.\n\nPython code:\n\n" + .,
+            temperature: 0,
+            max_output_tokens: 500
+          }' code.txt > request.json
+
       - name: Call Azure OpenAI (Responses API)
         env:
           AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
           AZURE_OPENAI_KEY: ${{ secrets.AZURE_OPENAI_KEY }}
         run: |
-          CODE_JSON=$(jq -Rs . < code.txt)
-
-          cat <<EOF > request.json
-          {
-            "input": "You are a strict Python code reviewer.\n\nReview the following Python code ONLY for:\n- Syntax errors\n- Indentation issues\n- Invalid or missing imports\n- Obvious runtime errors\n\nDO NOT suggest refactoring or optimization.\n\nRespond in EXACTLY one of these formats:\n\nIssues Found:\n- File:\n  Line:\n  Issue:\n  Fix:\n\nOR\n\nNo syntax issues found. Code is safe to merge.\n\nPython code:\n\n" ,
-            "temperature": 0,
-            "max_output_tokens": 500
-          }
-          EOF
-
-          jq --arg code "$(cat code.txt)" '.input += $code' request.json > request_final.json
-
           curl -s -X POST "$AZURE_OPENAI_ENDPOINT" \
             -H "Content-Type: application/json" \
             -H "api-key: $AZURE_OPENAI_KEY" \
-            -d @request_final.json > response.json
+            -d @request.json \
+            -o response.json
 
-
-
-      - name: Extract AI response safely
+      - name: Extract AI response
         run: |
-          CONTENT=$(jq -r '.output_text // empty' response.json)
+          CONTENT=$(jq -r '.output[0].content[0].text // empty' response.json)
 
           if [ -z "$CONTENT" ]; then
             echo "⚠️ AI review failed or returned empty output." > comment.txt
