--- a/.github/workflows/ai-python-review.yml
+++ b/.github/workflows/ai-python-review.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           echo "" > code.txt
           if [ -s files.txt ]; then
-            while read file; do
+            while read -r file; do
               echo "### File: $file" >> code.txt
               cat "$file" >> code.txt
               echo "" >> code.txt
@@ -35,54 +35,37 @@ jobs:
             echo "No Python files changed." >> code.txt
           fi
 
-      - name: Build request.json (Foundry Responses API)
+      - name: Build request.json
         run: |
-          PROMPT="You are a strict Python code reviewer.
-
-Check ONLY for:
-- Syntax errors
-- Indentation errors
-- Missing or invalid imports
-- Obvious runtime errors
-
-Respond EXACTLY in one of these formats:
-
-Issues Found:
-- File: <filename>
-  Line: <line number>
-  Issue: <what is wrong>
-  Fix: <how to fix>
-
-OR
-
-No syntax issues found. Code is safe to merge.
-"
-
           jq -n \
-            --arg prompt "$PROMPT" \
             --arg code "$(cat code.txt)" \
             '{
-              input: ($prompt + "\n\nPython code:\n" + $code),
-              temperature: 0,
+              model: "gpt-4o-mini",
+              input: [
+                {
+                  role: "user",
+                  content: "You are a strict Python code reviewer. Check ONLY syntax, indentation, imports, and runtime errors.\n\nPython code:\n\n" + $code
+                }
+              ],
               max_output_tokens: 500
             }' > request.json
 
-      - name: Call Azure AI Foundry (Responses API)
+      - name: Call Azure AI Foundry
         env:
           AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
           AZURE_OPENAI_KEY: ${{ secrets.AZURE_OPENAI_KEY }}
         run: |
-          curl --fail --max-time 60 -X POST "$AZURE_OPENAI_ENDPOINT" \
+          curl --max-time 30 -X POST "$AZURE_OPENAI_ENDPOINT" \
             -H "Content-Type: application/json" \
             -H "api-key: $AZURE_OPENAI_KEY" \
-            -d @request.json > response.json
+            -d @request.json \
+            -o response.json
 
       - name: Extract AI response
         run: |
-          COMMENT=$(jq -r '.output_text // "⚠️ AI review failed or returned empty output."' response.json)
-          echo "$COMMENT" > comment.txt
+          jq -r '.output_text // "⚠️ No issues returned by AI."' response.json > comment.txt
 
-      - name: Post comment to Pull Request
+      - name: Post comment to PR
         uses: actions/github-script@v7
         with:
           script: |
@@ -93,5 +76,5 @@ No syntax issues found. Code is safe to merge.
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body
+              body: body
             });
