--- a/.github/workflows/ai-python-review.yml
+++ b/.github/workflows/ai-python-review.yml
@@ -35,22 +35,43 @@ jobs:
             echo "No Python files changed." >> code.txt
           fi
 
-      - name: Build request.json
+      - name: Build request.json (jq-safe)
         run: |
+          PROMPT="You are a strict Python code reviewer.
+
+Check ONLY for:
+- Syntax errors
+- Indentation errors
+- Missing or invalid imports
+- Obvious runtime errors
+
+If issues exist, respond like this:
+
+Issues Found:
+- File:
+  Line:
+  Issue:
+  Fix:
+
+Otherwise respond:
+No syntax issues found. Code is safe to merge.
+"
+
           jq -n \
+            --arg prompt "$PROMPT" \
             --arg code "$(cat code.txt)" \
             '{
               model: "gpt-4o-mini",
               input: [
                 {
                   role: "user",
-                  content: "You are a strict Python code reviewer. Check ONLY syntax, indentation, imports, and runtime errors.\n\nPython code:\n\n" + $code
+                  content: ($prompt + "\n\nPython code:\n\n" + $code)
                 }
               ],
               max_output_tokens: 500
             }' > request.json
 
-      - name: Call Azure AI Foundry
+      - name: Call Azure AI Foundry (Responses API)
         env:
           AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
           AZURE_OPENAI_KEY: ${{ secrets.AZURE_OPENAI_KEY }}
@@ -63,9 +84,9 @@ jobs:
 
       - name: Extract AI response
         run: |
-          jq -r '.output_text // "⚠️ No issues returned by AI."' response.json > comment.txt
+          jq -r '.output_text // "⚠️ AI did not return any output."' response.json > comment.txt
 
-      - name: Post comment to PR
+      - name: Post comment to Pull Request
         uses: actions/github-script@v7
         with:
           script: |
